--- a/_posts/games/jams/2023-02-15-thehole.md
+++ b/_posts/games/jams/2023-02-15-thehole.md
@@ -3,13 +3,13 @@ layout: gameinfo
 title:  "The Hole"
 titleclass: textsize26
 date:   2024-02-02 19:31:00 +0100
-categories: games
+categories: jams
 
-permalink: /games/thehole
+permalink: /jams/thehole
 link: https://munij.itch.io/the-hole
 preview: /assets/images/TheHole.png
 fulltitle: "The Hole"
 releasedate: "2023/02/15"
 company: "Black and White Jam N°11"
-role: "Programmer & Designer/br>"
+role: "Programmer & Designer"
 ---
