--- a/_posts/games/jams/2023-02-15-thehole.md
+++ b/_posts/games/jams/2023-02-15-thehole.md
@@ -6,7 +6,7 @@ date:   2024-02-02 19:31:00 +0100
 categories: jams
 
 permalink: /jams/thehole
-link: https://munij.itch.io/the-hole
+link: https://munjii.itch.io/the-hole
 preview: /assets/images/TheHole.png
 fulltitle: "The Hole"
 releasedate: "2023/02/15"
