Improve responsiveness; Modify styles and page layouts

--- a/_posts/games/jams/2023-02-15-thehole.md
+++ b/_posts/games/jams/2023-02-15-thehole.md
@@ -1,12 +1,12 @@
 ---
 layout: gameinfo
 title:  "The Hole"
-titleclass: textsize26
+titleclass: font28px
 date:   2024-02-02 19:31:00 +0100
 categories: jams
 
 permalink: /jams/thehole
-link: https://munjii.itch.io/the-hole
+link: https://munjidev.itch.io/the-hole
 preview: /assets/images/TheHole.png
 fulltitle: "The Hole"
 releasedate: "2023/02/15"
